add transaction and budget works

--- a/web/board/templates/board/transaction_detail.html
+++ b/web/board/templates/board/transaction_detail.html
@@ -1,6 +1,6 @@
 {% extends "generic/base.html" %}
 
 {% block content %}
-<h3>{{ card.title }}</h3>
-<p>{{ card.description }}</p>
+<h3>{{ transaction.amount }}</h3>
+<p>{{ transaction.description }}</p>
 {% endblock content %}
